--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,14 @@
       <!--logo区域-->
       <h1 class="logo">
         <a>
-          <img src="./images/logo.png">
+          <img src="./images/logo.png" alt="logo">
         </a>
       </h1>
       <!--导航区域-->
       <ul class="nav">
         <li class="active">
           <a>
-            <div class="up">
+            <div class="up" >
               <img src="./images/home.png" alt="home">
             </div>
             <div class="down">
@@ -59,20 +59,179 @@
   <!--内容区-->
   <div id="content">
     <ul>
+      <!--第一屏home-->
       <li>
-        <section>home</section>
+        <section class="home">
+          <!--轮播区域-->
+          <ul class="home-carousel">
+            <li class="common-title show">one layer</li>
+            <li class="common-title">two layer</li>
+            <li class="common-title">three layer</li>
+            <li class="common-title">four layer</li>
+          </ul>
+          <!--小圆点-->
+          <ul class="home-points">
+            <li class="active"></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </section>
+      </li>
+      <!--第二屏course-->
+      <li>
+        <section class="course">
+          <!--标题-->
+          <h2 class="course-title common-title">
+            <span>EINIGE</span> <br>
+            <span>UNSERER</span> <br>
+            <span>KUNDEN</span>
+          </h2>
+          <!--文本-->
+          <p class="course-text common-text">
+            Das Kundenvertrauen in unsere Kompetenz ist die notwendige Basis einer erfolgreichen Zusammenarbeit, gleichzeitig aber auch das größte Lob, das man uns entgegenbringen kann.
+            <br>
+            Diese und viele weitere große und kleine Kunden vertrauen uns seit Jahren, was uns stolz macht, und dafür sagen wir an dieser Stelle einfach mal.
+          </p>
+          <!--照片墙-->
+          <ul class="course-photo">
+            <li>
+              <div class="front"></div>
+              <div class="back">我有九幢别墅，一幢都不给你</div>
+            </li>
+            <li>
+              <div class="front"></div>
+              <div class="back">我有九幢别墅，一幢都不给你</div>
+            </li>
+            <li>
+              <div class="front"></div>
+              <div class="back">我有九幢别墅，一幢都不给你</div>
+            </li>
+            <li>
+              <div class="front"></div>
+              <div class="back">我有九幢别墅，一幢都不给你</div>
+            </li>
+            <li>
+              <div class="front"></div>
+              <div class="back">我有九幢别墅，一幢都不给你</div>
+            </li>
+            <li>
+              <div class="front"></div>
+              <div class="back">我有九幢别墅，一幢都不给你</div>
+            </li>
+            <li>
+              <div class="front"></div>
+              <div class="back">我有九幢别墅，一幢都不给你</div>
+            </li>
+            <li>
+              <div class="front"></div>
+              <div class="back">我有九幢别墅，一幢都不给你</div>
+            </li>
+            <li>
+              <div class="front"></div>
+              <div class="back">我有九幢别墅，一幢都不给你</div>
+            </li>
+            <li>
+              <div class="front"></div>
+              <div class="back">我有九幢别墅，一幢都不给你</div>
+            </li>
+            <li>
+              <div class="front"></div>
+              <div class="back">我有九幢别墅，一幢都不给你</div>
+            </li>
+            <li>
+              <div class="front"></div>
+              <div class="back">我有九幢别墅，一幢都不给你</div>
+            </li>
+          </ul>
+          <!--线-->
+          <div class="course-line"></div>
+          <div class="course-line"></div>
+          <div class="course-line"></div>
+          <div class="course-line"></div>
+          <div class="course-line"></div>
+        </section>
+      </li>
+      <!--第三屏works-->
+      <li>
+        <section class="works">
+          <!--第三屏标题-->
+          <h2 class="works-title common-title">
+            <span>EINBLICK</span></br>
+            <span>ERKENNTNIS</span></br>
+            <span>ERGEBNIS</span>
+          </h2>
+          <!--第三屏列表-->
+          <ul class="works-list clearfix">
+            <li>
+              <img src="./images/worksimg1.jpg" alt="">
+              <div class="works-mask">
+                <span>你还挺光荣呗</span>
+                <div></div>
+              </div>
+            </li>
+            <li>
+              <img src="./images/worksimg2.jpg" alt="">
+              <div class="works-mask">
+                <span>你还挺光荣呗</span>
+                <div></div>
+              </div>
+            </li>
+            <li>
+              <img src="./images/worksimg3.jpg" alt="">
+              <div class="works-mask">
+                <span>你还挺光荣呗</span>
+                <div></div>
+              </div>
+            </li>
+            <li>
+              <img src="./images/worksimg4.jpg" alt="">
+              <div class="works-mask">
+                <span>你还挺光荣呗</span>
+                <div></div>
+              </div>
+            </li>
+          </ul>
+          <!--第三屏机器人-->
+          <div class="works-robot"></div>
+        </section>
+      </li>
+      <!--第四屏about-->
+      <li>
+        <section class="about">
+          <!--第四屏标题-->
+          <h2 class="about-title common-title">
+            <span>DIE</span></br>
+            <span>SPEZIELLE</span></br>
+            <span>VIELFALT</span>
+          </h2>
+          <!--第四屏文本-->
+          <p class="about-text">
+            Der bunte Medienmix ist die Faszination die uns antreibt und das, was man an uns schätzt. Von A bis Z und von vorne bis hinten nehmen wir Ihr Projekt unter unsere Fittiche und lassen es zu etwas Großartigem heranwachsen.
+          </p>
+          <!--第四屏图片框-->
+          <div class="about-up">
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+          <div class="about-down">
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+          <!--第四屏线-->
+          <p class="about-line"></p>
+        </section>
       </li>
       <li>
-        <section>course</section>
-      </li>
-      <li>
-        <section>works</section>
-      </li>
-      <li>
-        <section>about</section>
-      </li>
-      <li>
-        <section>team</section>
+        <section class="team">Team</section>
       </li>
     </ul>
   </div>
