第五屏布局和逻辑

--- a/src/index.html
+++ b/src/index.html
@@ -230,8 +230,28 @@
           <p class="about-line"></p>
         </section>
       </li>
+      <!--第五屏team-->
       <li>
-        <section class="team">Team</section>
+        <section class="team">
+          <!--第五屏标题-->
+          <h2 class="team-title common-title">
+            <span>WIR SIND</span><br>
+            <span>VOXELAIR</span>
+          </h2>
+          <!--第五屏文本-->
+          <p class="team-text common-text">
+            Wir sind seit 2002 eine Full-Service-Werbeagentur mit Stammsitz in Heimsheim, zwischen Stuttgart und Karlsruhe.
+            <br>
+            Über 60 Jahre Erfahrung vereinen das gesamte VoxelAir-Team. Dabei hat jedes Voxel neben professionellem Allroundwissen auch sein ganz spezielles Gebiet, um selbst die individuellsten Kundenwünsche schnell und kompetent umzusetzen.
+          </p>
+          <!--第五屏图片-->
+          <ul class="team-list">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </section>
       </li>
     </ul>
   </div>
