--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
           <img src="./images/logo.png" alt="logo">
         </a>
       </h1>
+      <!--音乐-->
+      <div class="music">
+        <audio src="./images/audio.mp3"></audio>
+      </div>
       <!--导航区域-->
       <ul class="nav">
         <li class="active">
@@ -58,7 +62,7 @@
   </header>
   <!--内容区-->
   <div id="content">
-    <ul>
+    <ul class="content-main">
       <!--第一屏home-->
       <li>
         <section class="home">
@@ -150,6 +154,10 @@
           <div class="course-line"></div>
           <div class="course-line"></div>
           <div class="course-line"></div>
+          <!--飞机-->
+          <div class="course-plane1"></div>
+          <div class="course-plane2"></div>
+          <div class="course-plane3"></div>
         </section>
       </li>
       <!--第三屏works-->
@@ -194,6 +202,10 @@
           </ul>
           <!--第三屏机器人-->
           <div class="works-robot"></div>
+          <!--铅笔-->
+          <div class="works-pencil1"></div>
+          <div class="works-pencil2"></div>
+          <div class="works-pencil3"></div>
         </section>
       </li>
       <!--第四屏about-->
@@ -254,7 +266,16 @@
         </section>
       </li>
     </ul>
+    <!--侧边导航-->
+    <ul class="content-nav">
+      <li class="active"></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
   </div>
+  <!--开场动画-->
 </div>
 </body>
 </html>
