--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       </h1>
       <!--音乐-->
       <div class="music">
-        <audio src="./images/audio.mp3"></audio>
+        <audio src="./images/audio.mp3" loop></audio>
       </div>
       <!--导航区域-->
       <ul class="nav">
@@ -276,6 +276,11 @@
     </ul>
   </div>
   <!--开场动画-->
+  <div id="boot-animation">
+    <div class="up"></div>
+    <div class="down"></div>
+    <div class="line"></div>
+  </div>
 </div>
 </body>
 </html>
